# m5stack-stick-s3-esphome

./: .gitignore  LICENSE.md  README.md  esphome_config.yaml  pyproject.toml
custom_components/m5pm1/: m5pm1.h
external_components/m5pm1/: __init__.py  m5pm1.cpp
external_components/m5stack-stick-s3/: __init__.py  m5stack-stick-s3.h
