[project]
name = "m5stack-stick-s3-esphome"
version = "0.1.0"
description = "Adds support for M5Stack Stick S3 to ESPHome"
keywords = ["esp32", "esphome", "m5stack"]
readme = "README.md"
authors = [
    { name = "Viktor Lazarev", email = "taurus101v@gmail.com" }
]
requires-python = "~=3.11.0"
dependencies = [
    "esphome>=2026.5.0",
    "wheel>=0.47.0",
]

[build-system]
requires = ["uv_build>=0.11.16,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ruff>=0.15.14",
]
